fix commit check visibility

--- a/client/assets/styles/scss/components/repository-details-content.scss
+++ b/client/assets/styles/scss/components/repository-details-content.scss
@@ -61,10 +61,6 @@
         .small {
           color: currentColor;
         }
-
-        .icons-fat-check {
-          visibility: hidden;
-        }
       }
 
       .small {
